force-app/main/default/objects/aig_AI_Risk_Packet_Question__c/aig_AI_Risk_Packet_Question__c.object-meta.xml
<CustomObject>
    <label>AI Risk Packet Question</label>
    <nameField>
        <displayFormat>Q-{0000000}</displayFormat>
        <label>AI Risk Packet Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Risk Packet Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>