force-app/main/default/objects/aig_AI_Risk_Packet_Question__c/fields/aig_AI_Risk_Packet__c.field-meta.xml
<CustomField>
    <fullName>aig_AI_Risk_Packet__c</fullName>
    <label>AI Risk Packet</label>
    <referenceTo>aig_AI_Risk_Packet__c</referenceTo>
    <relationshipLabel>AI Risk Packet Questions</relationshipLabel>
    <relationshipName>aig_AI_Risk_Packet_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>