force-app/main/default/objects/aig_AI_Risk_Packet_Question__c/fields/aig_Category__c.field-meta.xml
<CustomField>
    <fullName>aig_Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>aig_Risk_Categories</valueSetName>
    </valueSet>
</CustomField>