force-app/main/default/objects/aig_AI_Risk_Packet_Question__c/fields/aig_Question__c.field-meta.xml
<CustomField>
    <fullName>aig_Question__c</fullName>
    <label>Question</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>